# ComputerVisionStuff

./: README.md
FaceTracking/: README.txt  launch.sh
FaceTracking/data/: annotations.yaml
FaceTracking/data/jpg/: README
FaceTracking/models/: facedet  facetrack  patch  shape
FaceTracking/src/: Makefile  annotate  annotate.cpp  face_detector.cpp  face_detector.hpp  face_tracker.cpp  face_tracker.hpp  face_tracker_file  ft.hpp  ft_data.cpp  ft_data.hpp  outtrackerfile  patch_model.cpp  patch_model.hpp  patch_model_file  shape_model  shape_model.cpp  shape_model.hpp  train_face_detector.cpp  train_face_tracker.cpp  train_patch_model.cpp  train_shape_model.cpp  trainfacedet  trainfacetrack  trainpatch  trainshape  visualize_annotations.cpp  visualize_face_detector.cpp  visualize_face_tracker.cpp  visualize_patch_model.cpp  visualize_shape_model.cpp  vizannot  vizfacedet  vizpatch  vizshape  viztracker
PlateRecognition/: CMakeLists.txt  README  detect_regions.cc  detect_regions.h  eval_ocr.cc  main.cc  ocr.cc  ocr.h  plate.cc  plate.h  train_ocr.cc  train_svm.cc
PlateRecognition/utils/: eval.sh
